// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findExpressionOccurrences returns only current array 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 6,
      "start": 0,
    },
    "value": "[5, 5]",
  },
]
`;

exports[`findExpressionOccurrences returns only current object 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 32,
      "start": 18,
    },
    "value": "{ a: 5, b: 5 }",
  },
]
`;

exports[`findExpressionOccurrences works with multiple occurrences 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 1,
      "start": 0,
    },
    "value": "5",
  },
  Expression {
    "position": Position {
      "end": 5,
      "start": 4,
    },
    "value": "5",
  },
]
`;

exports[`findExpressionOccurrences works with multiple occurrences of new 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 17,
      "start": 10,
    },
    "value": "new A()",
  },
  Expression {
    "position": Position {
      "end": 36,
      "start": 29,
    },
    "value": "new A()",
  },
]
`;

exports[`findExpressionOccurrences works with multiple occurrences of strings 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 5,
      "start": 0,
    },
    "value": "\\"abc\\"",
  },
  Expression {
    "position": Position {
      "end": 13,
      "start": 8,
    },
    "value": "\\"abc\\"",
  },
]
`;

exports[`findExpressionOccurrences works with multiple scopes 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 9,
      "start": 8,
    },
    "value": "3",
  },
  Expression {
    "position": Position {
      "end": 13,
      "start": 12,
    },
    "value": "3",
  },
]
`;

exports[`findExpressionOccurrences works with single occurrence 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 1,
      "start": 0,
    },
    "value": "5",
  },
]
`;

exports[`findExpressionOccurrences works with this 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 29,
      "start": 10,
    },
    "value": "{ b: 0, c: this.b }",
  },
]
`;

exports[`findExpressionOccurrences works with values in arrays 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 2,
      "start": 1,
    },
    "value": "5",
  },
  Expression {
    "position": Position {
      "end": 5,
      "start": 4,
    },
    "value": "5",
  },
]
`;

exports[`findExpressionOccurrences works with values in objects 1`] = `
Array [
  Expression {
    "position": Position {
      "end": 13,
      "start": 12,
    },
    "value": "5",
  },
  Expression {
    "position": Position {
      "end": 19,
      "start": 18,
    },
    "value": "5",
  },
]
`;
